# CodingEveryday

./: .clang-format  .gitignore  README.md  TODO
beautiful_code/: 10_clojure_one_lines.clj  regex  triangle.rb
code/2021/03/01/cpp-iguana/: CMakeLists.txt  json.cc  msgpack.cc  sample.cc  xml.cc
code/2021/04/28/: CMakeLists.txt  iterator_pattern.cc  iterator_pattern.h  iterator_pattern_unittest.cc
code/2021/05/02/: .clang-format  .clang-tidy  .ycm_extra_conf.py  CMakeLists.txt  CPPLINT.cfg  Makefile
code/2021/05/02/cmake/: cpm-download.cmake
code/2021/05/02/dev-tools/: install.sh  linter_wrapper
code/2021/05/02/include/: iterator_pattern.h
code/2021/05/02/src/: CMakeLists.txt  iterator_pattern.cc  iterator_pattern_unittest.cc  main.cc
code/week1/day1/: for.go  switch.go
code/week1/day2/: README.md  channel_buffering.go  timer.go
code/week1/day3/: README.md  atomic_counters.go
code/week1/day4/: day4  echo_server.go
code/week10/day44/: mutex.h  std_mutex_ex.cc  threadLocal_test.cc
code/week10/day45/: nio.h  readline.c
code/week11/day47/: socket.cc
code/week11/day49/: logger1.rb  simple.rb
code/week11/day50/: application_log.rb
code/week12/day56/: pidfile.h
code/week13/day58/: lock  lock.cc  unique_lock
code/week13/day60/: hello.rb
code/week16/day67/: sinatra_upload.rb
code/week17/day68/: sinatra_now.rb  uri_parse.cc
code/week18/day70/: unordered_map_test.cc
code/week19/day78/: time_server.erl
code/week19/day79/: hello.go  variable.go
code/week19/day80/: wc.lex
code/week2/day6/: hello_thread.cc
code/week2/day7/: detach.cc  hardware_concurrency.cc  mutex.cc
code/week2/day8/: chrono_ex1  chrono_ex1.cc  chrono_sleep.cc
code/week2/day9/: README.md  async2.cc  regex1.cc
code/week20/day81/: temporary_variable.cc
code/week21/day82/: stdlib_support.cc
code/week21/day85/: apple_c_block_extension.c  cpp11_friend.cc  cpp11_longlong.cc  cpp11_sizeof.cc
code/week3/day10/: bitset2.cc  queue2.cc  stack2.cc
code/week3/day11/: README.md  erlang_type_conversions.erl  factorial
code/week3/day12/: README.md  ch2.erl  ch3.erl
code/week3/day13/: cd_source
code/week3/day14/: emacs-mac
code/week3/day15/: README.md
code/week3/day16/: README.md  osx_js_ex1.js  rename.js
code/week4/day17/: README.md
code/week4/day18/: insert_sort_for_otool_usage.c  leveldb_utils.cc  linux_userspace_crypto.c  timestamp_vs_now.erl
code/week4/day19/: README.md  bitmap_editor.tcl
code/week4/day20/: README.md
code/week4/day21/: gen_server_test.erl
code/week5/day24/: bada-rsyncd-31.conf  print.erl
code/week5/day27/: File.h
code/week6/day31/: random.h  skiplist.cc  skiplist.h
code/week7/day38/: skiplist.h  skiplist_test.cc
code/week9/day42/: fd_test.c
day1/: Note.md  README.md  c99_strcut_test.c  linux_oom_judge.c
day10/: Note.md  README.md  Resource.md
day11/: Note.md  README.md  redis_api_tutorial.rb
day12/: 001_two_sum__time_out.cc  001_two_sum_ac.cc  006_zig_zagconversion__easy.cc  007_reverse_integer.cc  elixir-unit-testing.exs
day12/leetcode/: 006_zig_zagconversion.cc
day13/: normal_distribution.cc
day14/: Note.md  insructions  tinyvm.rb
day15/: list_lexer.rb  list_lexer_by_regex.rb
day16/: TODO  cal.rb  leap_year.rb  less.rb  open-uri.rb  ruby_io.rb
day17/: tinyvm.rb
day18/: test_cwd.rb
day19/: c_type_size.c
day2/: Note.md  README.md  daemonize.c  strncat.c  switch_continue_test.cc
day3/: TODO  bubble_sort_another.cc  insert_sort.cc
day4/: README.md  cpp11_lambda.cc  ruby_lambda.rb
day6/: Note.md  README.md  singleton.cc
day7/issues/: .gitignore  TODO  issues.REMOVED.git-id  mix.exs
day7/issues/test/: cli_test.exs  doc_test.exs
day8/: Note.md  elixir_observer.exs
day9/: TODO  pmap.exs
doc/: bash_shortcuts  best_find_answer_approach  linux_kernel_coding_style  otool  tmux  vagrant  vim_plugins
interesting_code/: interesting_command_usage  interesting_main_recursive.c  one_page_blog.rb
notes/: Note.md  temp
others/utils/cpp/: FileUtils.cc  collection.h  collection_test  collection_test.cc  file.h
others/utils/erlang/: utils.erl
others/utils/golang/: utils.go
resources/manpages-zh/: VERSION
snippets/: cpp_decl
templates/: Makefile
test/c/: c_block.c
test/cpp/: cons.cc  cons.s  funcall_order.cc  function.cc  is_void.cc  main_recursive.cc  markerfu.cc  member_function.cc  singleton.cc  temp_variable.cc  temporary_variable.s  tuple.cc  unique_ptr.cc  virtual_dtor.cc
test/cpp/basic/: simple_class.cc  simple_class.ll  simple_class.s
test/cpp/stl/: accumulate.cc  inner_product.cc  vector.cc
test/cpp/tmp/: a.cc  b.cc  c.cc  shared_ptr.cc
test/os_api/: FAQ  fork_fd_test.c
tools/: a  remove_lineend_space.rb
week1/day1/: Note.md  linux_oom_judge.c
week1/day2/: cpp11_for_iterator.cc
week1/day3/: insert_sort_sentinel.cc
week2/day11/: TODO
week2/day4/: ruby_lambda.rb
week2/day5/: Summary.md
week2/day7/: .gitignore  README.md
week2/day8/: README.md  observer.rb
week3/day12/: elixir-input-output.exs  elixir-pattern-matching-guards.exs
week3/day14/: tinyvm.rb
week3/day14/vm_examples/: fib.vm
week3/day15/: Rakefile
week3/day16/: README.md  cal_gai.rb  ruby_stringio.rb
week4/day21/: d2h  h2d
week4/day22/: Note.md  README.md  signal_util.c  util.h
week4/day23/: Mutex.h  README.md
week4/day25/: README.md  code.s
week5/day26/: README.md
week5/day27/: Makefile  Note.md  README.md  mmap.c
week5/day28/: Note.md  README.md
week5/day29/: Note.md  counter_test.erl
week5/day30/: Note.md  tr_server.erl
week5/day31/: README.md
week5/day32/: erlang_numbers.erl
week6/day33/: README.md  erlang_numbers_and_operation.erl  log.c  logger.rb  monitor.rb
week6/day34/: README.md  time_compat.erl
week6/day35/: record_info.erl
week6/day36/: README.md
week6/day36/Socket/: client.c  (+1 more)
week6/day37/: README.md
week6/day39/: TODO
week7/day40/: README.md  leveldb.cc  leveldb_test.cc
week7/day44/: HelloThread.java  link_list.c  simple.go
week7/day45/: README.md
week8/day48/: README.md  expression.clj  function.clj  graphic_swing.clj  introduction.clj
(+628 files in other folders)
